Add clj-async-profiler lab code
Checking in some lab code from playing around with the
(seemingly excellent) clj-async-profiler. A few observations
made but nothing to act on yet. Good to have here for later
excursions though!

Signed-off-by: Anders Eknert <anders@eknert.com>